k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mail-service.cosy-hosting.net
      secretName: mail-service-tls
  ingressClassName: traefik
  rules:
    - host: mail-service.jannekeipert.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mail-service-service
                port:
                  number: 8080
